# RDI-AgentBeats-TheBulletproofProtocol

./: .env.example  .gitignore  ABSTRACT.md  AGENTS.md  CHANGELOG.md  Dockerfile.green  Dockerfile.purple  Makefile  README.md  docker-compose-local.yml  docker-compose.yml  mkdocs.yaml  pyproject.toml  scenario.toml
.claude/: ralph-loop.local.md  settings.json
.claude/commands/: codebase-visualizer.md  phase-exec-planner.md  phase-implement.md
.claude/rules/: context-management.md
.claude/scripts/: visualize_codebase_to_html.py
.claude/skills/building-userstory/: SKILL.md
.claude/skills/codebase-visualizer/: SKILL.md
.claude/skills/commit-with-message/: SKILL.md
.claude/skills/compacting-context/: SKILL.md
.claude/skills/generating-interactive-userstory-md/: SKILL.md
.claude/skills/generating-prd/: SKILL.md
.claude/skills/generating-prd-from-userstory/: SKILL.md
.claude/skills/generating-prd-json-from-prd-md/: SKILL.md
.claude/skills/generating-prd-md-from-userstory-md/: SKILL.md
.claude/skills/implementing-python/: SKILL.md
.claude/skills/researching-codebase/: SKILL.md
.claude/skills/reviewing-code/: SKILL.md
.devcontainer/project/: devcontainer.json
.devcontainer/template/: devcontainer.json
.github/workflows/: docker-build-push.yml  docker-publish.yml
_archive/: Dockerfile.green  Dockerfile.purple
_archive/results/: .gitkeep  benchmark_validation.json  local_benchmark.json
_archive/src/TheBulletproofProtocol/: README.md
_archive/tests/: test_abstract.py  test_agentbeats_registration_guide.py  test_benchmark_validation.py  test_docker_compose.py  test_experimentation_checker.py  test_ghcr_scripts.py  test_github_actions_workflow.py  test_green_agent_server.py  test_ground_truth_dataset.py  test_purple_agent_executor.py  test_readme_submission_checklist.py  test_routine_engineering.py  test_scenario_config.py  test_scorer.py
data/: DATA_PROVENANCE.md  README.md  adversarial_narratives.json  ground_truth.json  held_out_test_set.json
docs/: ABSTRACT.md  Abstract.md  GAP-ANALYSIS.md  GreenAgent-PRD.md  GreenAgent-UserStory.md  LIMITATIONS.md  PRD.md  PRD.old.md  PurpleAgent-PRD.md  PurpleAgent-UserStory.md  README.md  TODO.md  UserStory-condensed.md  UserStory.md  architecture.md  testing-strategy.md
docs/AgentBeats/: ABSTRACT.md  AGENTBEATS_REGISTRATION.md  AgentBeats-Benchmark-Design-Principles.md  AgentBeats-Research.md  COMPETITION-ALIGNMENT.md  DEMO_VIDEO_SCRIPT.md  Green-Agent-Metrics-Specification.md  LIMITATIONS.md  Local-Testing-and-Deployment.md  RESOURCES.md  SUBMISSION-GUIDE.md  Technical-Implementation-Guide.md  leaderboard_queries.json
docs/arch_vis/: AgenticBenchArch.puml  ComponentDiagram.puml  TracingArchitecture.puml
docs/ralph/: prd.json  progress.txt
docs/research/: AgentBeats-Benchmark-Design-Principles.md  AgentBeats-Research.md  Green-Agent-Metrics-Specification.md  Local-Testing-and-Deployment.md  Technical-Implementation-Guide.md  Test-First-Quality-Bench-Tools.md
docs/sprints/: GreenAgent-Sprint1-PRD-Ralph.md  GreenAgent-Sprint2-PRD-Ralph.md
ralph/: README.md  TEMPLATE_USAGE.md
ralph/docs/: LEARNINGS.md  README.md  prd.json  progress.txt
ralph/scripts/: generate_prd_json.py  init.sh  ralph.sh  setup_project.sh
results/: local_benchmark.json
results/logs_comprehensive_20260125_201739/: NQ001_response.json  NQ002_response.json  NQ003_response.json  NQ004_response.json  NQ005_response.json  NQ006_response.json  NQ007_response.json  NQ008_response.json  NQ009_response.json  NQ010_response.json  NQ011_response.json  NQ012_response.json  NQ013_response.json  NQ014_response.json  NQ015_response.json  NQ016_response.json  Q001_response.json  Q002_response.json  Q003_response.json  Q004_response.json  Q005_response.json  Q006_response.json  Q007_response.json  Q008_response.json  Q009_response.json  Q010_response.json  Q011_response.json  Q012_response.json  Q013_response.json  Q014_response.json  report.txt  test_results.json
scripts/: build.sh  common.sh  push.sh  test_arena_e2e.sh  test_comprehensive.sh  test_e2e.sh  validate_benchmark.py  validate_story_031.py
scripts/docker/: build.sh  common.sh  push.sh  test_arena_e2e.sh  test_e2e.sh
scripts/leaderboard/: generate_compose.py
scripts/ralph/: init.sh
src/: validate_benchmark.py
src/TheBulletproofProtocol/: README.md  example.py
src/bulletproof_green/: __init__.py  a2a_client.py  agent.py  agent_card.py  arena_executor.py  evaluator.py  executor.py  llm_judge.py  messenger.py  models.py  scorer.py  server.py  settings.py  statistics.py
src/bulletproof_purple/: __init__.py  agent_card.py  executor.py  generator.py  models.py  server.py  settings.py  templates.py
tests/: test_abstract.py  test_accuracy_by_difficulty_tier.py  test_adversarial_narratives.py  test_adversarial_narratives_README.md  test_agent_card_discovery.py  test_agentbeats_registration_guide.py  test_anti_gaming.py  test_arena_executor.py  test_arena_executor_orchestration.py  test_arena_integration.py  test_arena_mode_server.py  test_arena_server_mode.py  test_benchmark_validation.py  test_business_risk_detector.py  test_data_contamination.py  test_docker_compose.py  test_docker_compose_orchestration.py  test_docker_dockerfiles_images.py  test_docker_ghcr_registry.py  test_dockerfile_green.py  test_dockerfile_purple.py  test_dockerfiles.py  test_evaluator_integration.py  test_ghcr_workflow.py  test_github_actions_workflow.py  test_green_a2a_client.py  test_green_agent_executor.py  test_green_agent_integration.py  test_green_client_a2a_requests.py  test_green_dataset_ground_truth.py  test_green_discovery_agent_card.py  test_green_evals_evaluator_rules.py  test_green_evals_hybrid_integration.py  test_green_evals_llm_judge_hybrid.py  test_green_evals_scorer_aggregation.py  test_green_evaluator.py  test_green_messaging_a2a.py  test_green_output_schema_validation.py  test_green_scorer.py  test_green_server.py  (+24 more)
tests/integration/: test_arena_mode.py  test_arena_mode_integration.py  test_e2e_assessment.py  test_green_agent.py  test_purple_agent.py
(+29 files in other folders)
