[project]
name = "RDI-AgentBeats-TheBulletproofProtocol"
version = "0.0.0"
description = "A recursive adversarial agent system where a Virtual IRS Auditor ruthlessly critiques and trains a Generator Agent to write audit-proof R&D tax credit claims."
requires-python = ">=3.13"
readme = "README.md"
license = { file = "LICENSE.md" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bulletproof_purple", "src/bulletproof_green", "src/TheBulletproofProtocol"]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "httpx>=0.27.0",  # Required by TestClient
]
purple = [
    "a2a-sdk[http-server]>=0.3.0",
    "uvicorn>=0.30.0",
]
green = [
    "a2a-sdk[http-server]>=0.3.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "httpx>=0.27.0",  # Required by TestClient
    "a2a-sdk[http-server]>=0.3.0",  # Required for testing both agents
    "uvicorn>=0.30.0",
    "scikit-learn>=1.5.0",  # Required for benchmark validation metrics
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N999"]  # Allow PascalCase module name for TheBulletproofProtocol

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (requires docker-compose services running)",
]

[tool.bumpversion]
current_version = "0.0.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
allow_dirty = false
ignore_missing_version = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/TheBulletproofProtocol/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "README.md"
search = "version-{current_version}-58f4c2"
replace = "version-{new_version}-58f4c2"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = """
## [Unreleased]
"""
replace = """
## [Unreleased]

## [{new_version}] - {now:%Y-%m-%d}
"""
